portfolio/style.css
/* ... */
@media (max-width: 572px) {
  .portfolio-img {
    width: 99%;
  }
}

@media (max-width: 484px) {
  .portfolio-section {
    padding: 80px 0 0;
  }
}

/* VIDEO */

.video-large,
.video-small {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
  cursor: pointer;
  transition: 1s;
}

.video-large {
  background-image: url("./assets/img/video-player.jpg");
}

.video-small {
  display: none;
  background-image: url("./assets/img/video-player-768.jpg");
}

.video-player {
  position: relative;
  left: -20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: calc(100% + 40px);
  transition: 1s;
}

.video-play-button {
  position: absolute;
  z-index: 1;
  align-self: center;
  width: 9vw;
  max-width: 130px;
  height: 9vw;
  max-height: 130px;
  background-color: transparent;
  background-image: url("./assets/svg/video-button.svg");
  background-size: 100% auto;
  transition: 0.3s;
}

.video-play-button.light-theme {
  background-image: url("./assets/svg/video-button-light.svg");
}

.logo:hover,
.change-theme:hover,
.video-play-button:hover,
.video-controls-button:hover,
.volume-btn:hover,
.social-icon:hover {
  filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
}

.header-container.light-theme .logo:hover,
.header-container.light-theme .light-theme-icon:hover,
.video-play-button.light-theme:hover,
.footer-container.light-theme .social-icon:hover {
  filter: invert(79%) sepia(8%) saturate(1308%) hue-rotate(7deg) brightness(89%) contrast(83%);
}

.viewer {
  border: 2px solid #bdae82;
  border-bottom: none;
  transition: 1s;
}

.video-controls {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  padding: 0 20px;
  border: 2px solid #bdae82;
  border-top: none;
}

.video-controls.hide {
  display: none;
}

.video-controls-button {
  width: 40px;
  background: transparent;
  background-image: url("./assets/svg/play.svg");
  background-repeat: no-repeat;
  background-position: center;
}

.video-controls-button.pause {
  background-image: url("./assets/svg/pause.svg");
}

.video-progress {
  /* width: 90%; */
  flex-grow: 7;
}

.volume-btn {
  width: 50px;
  background: transparent;
  background-image: url("./assets/svg/volume.svg");
  background-repeat: no-repeat;
  background-position: center;
}

.volume-btn.mute {
  background-image: url("./assets/svg/mute.svg");
}

.video-progress,
.video-volume {
  height: 10px;
  background: linear-gradient(to right, #bdae82 0%, #bdae82 50%, #c8c8c8 50%, #c8c8c8 100%);
  border-radius: 10px;
  -webkit-appearance: none;
}

.video-progress::-webkit-slider-thumb,
.video-volume::-webkit-slider-thumb {
  width: 20px;
  height: 20px;
  background: #c8c8c8;
  border-radius: 50%;
  -webkit-appearance: none;
}

.video-progress:hover,
.video-volume:hover {
  cursor: ew-resize;
}

.hide {
  opacity: 0;
}

.time {
  min-width: 105px;
  font-size: 16px;
}

.volume-group {
  display: flex;
  align-items: center;
  padding: 0 15px;
}

@media (max-width: 768px) {
  .video-controls {
    flex-wrap: wrap;
    height: auto;
    padding: 10px 0;
  }

  .video-progress {
    order: -1;
    width: 100%;
  }

  .volume-group {
    margin-left: auto;
  }

  .video-volume {
    width: 23vw;
  }

  .video-section {
    padding: 29px 0 1px;
  }

  .video-player {
    left: -60px;
    width: calc(100% + 120px);
    padding-top: 5px;
  }

  .video-play-button {
    top: calc(50% - 87px);
    width: 75px;
    height: 75px;
  }

  .video-large {
    display: none;
  }

  .video-small {
    display: block;
  }
}

@media (max-width: 484px) {
  .video-section {
    padding: 80px 0 0;
  }
}

/* PRICE */
.price-items {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.price-card {
  width: 450px;
  max-width: 100%;
  height: 505px;
  padding-top: 54px;
  border: 3px solid #bdae82;
}

.price-card.light-theme:not(:last-child) > .price-cost {
  color: inherit;
}

@media (max-width: 1389px) {
  .price-card {
    width: 420px;
    margin: 0 auto 50px;
  }
}

@media (max-width: 768px) {
  .price-items {
    position: relative;
    top: 5px;
  }
}

.price-head {
  padding-bottom: 47px;
  font-weight: bold;
  font-size: 28px;
  font-family: "Merriweather", serif;
  text-align: center;
}

.price-cost {
  padding-bottom: 32px;
  font-weight: bold;
  font-size: 24px;
  font-family: "Merriweather", serif;
  text-align: center;
  color: #bdae82;
}

.price-button {
  display: block;
  max-width: 90%;
  margin: 0 auto;
}

.price-description-list {
  padding-bottom: 39px;
  font-size: 18px;
}

.hire-me:hover,
.portfolio-button:hover,
.price-button:hover,
.contacts-button:hover,
.footer-link {
  color: #ffffff;
}

.hire-me:hover,
.portfolio-button:hover,
.price-button:hover,
.contacts-button:hover {
  box-shadow: 0 0.5em 0.5em -0.4em #ffffff;
  transform: translateY(-0.65em);
}

.hire-me.light-theme:hover,
.hire-me.light-theme:focus,
.contacts-container.light-theme .contacts-button:hover {
  color: #bdae82;
  box-shadow: inset -110px 0 0 0 #000000, inset 110px 0 0 0 #000000;
  transform: none;
}

@media (max-width: 360px) {
  .price-description-list {
    font-size: 14px;
    line-height: 1.2;
  }

  .price-card {
    height: 392px;
  }
}

/* CONTACTS */
.contacts-container {
  width: 100%;
  max-width: 1440px;
  height: 48.6vw;
  min-height: 600px;
  max-height: 700px;
  margin: 10px auto 0;
  padding: 75px 20px;
  background-image: url("./assets/img/contacts.jpg");
  background-repeat: no-repeat;
  background-size: 100% auto;
}

.contacts-container.light-theme {
  background-image: url("./assets/img/contacts-light.jpg");
}

.header-contacts {
  padding-bottom: 60px;
}

.section-contact {
  width: 450px;
  margin-left: auto;
  padding-top: 5px;
}
/* ... */

